Fixed author name remaining visible for Print

--- a/src/scss/resume-print.scss
+++ b/src/scss/resume-print.scss
@@ -163,6 +163,10 @@ $certificationPrintColumns: 2;
           display: flex;
           flex-direction: column;
 
+          > .author-name {
+            display: none;
+          }
+
           div.skills .skill {
             color: inherit;
           }
